[package]
name = "ecommerce_api"
version = "0.1.0"
edition = "2018"

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.5", features = ["postgres", "runtime-tokio-native-tls"] }
dotenv = "0.15"
jsonwebtoken = "7.2"
bcrypt = "0.11"
